<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.main.MainFragment">
 <LinearLayout
     android:id="@+id/map_and_photo_buttons"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:orientation="horizontal"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/take_photo"
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:background="@color/black"
         android:src="@drawable/ic_baseline_photo_camera_24" />

     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/open_map"
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:background="@color/black"
         android:src="@drawable/ic_baseline_place_24" />
 </LinearLayout>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/delete_all"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black"
        android:src="@drawable/ic_baseline_delete_outline_24"
        app:layout_constraintVertical_bias="0.99"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:background="#7fE3C626"
        android:id="@+id/photo_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/map_and_photo_buttons"
        app:layout_constraintBottom_toTopOf="@id/delete_all"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>